# launchpad-keyboard

./: Cargo.toml  Mapping.toml  README.md
src/: backend.rs  config.rs  device.rs  lib.rs  mapping.rs  message.rs  note.rs  virtual_input.rs
src/midi/: device.rs  input.rs  message.rs  mod.rs  note.rs  output.rs
