[package]
name = "lp-pro-gamecontroller"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.1"
log = { version = "0.4.29", features = ["std"] }
midir = "0.10.3"
once_cell = "1.21.3"
simple_logger = "5.1.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
uinput = "0.1.3"
